# rusty

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/proto/: canvaz-meta.proto  canvaz.proto
app/src/main/res/anim/: lyrics_slide_down_out.xml  lyrics_slide_up_in.xml  now_playing_recede_out.xml  now_playing_return_in.xml
app/src/main/res/color/: chip_background_color.xml  chip_stroke_color.xml  chip_text_color.xml  switch_thumb_tint.xml
app/src/main/res/drawable/: bg_album_art_placeholder.xml  bg_avatar.xml  bg_avatar_placeholder.xml  bg_playpause_button.xml  bg_popup_card.xml  bg_scrim_playing.xml  bg_status_dot.xml  bg_status_pill.xml  bg_tv_focus.xml  bg_tv_focus_switch.xml  bg_update_badge.xml  ic_apps.xml  ic_close.xml  ic_home.xml  ic_info.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_lock.xml  ic_mdi_calendar.xml  ic_mdi_chart.xml  ic_mdi_dashboard.xml  ic_mdi_energy.xml  ic_mdi_generic.xml  ic_mdi_history.xml  ic_mdi_logbook.xml  ic_mdi_map.xml  ic_mdi_settings.xml  ic_mdi_todo.xml  ic_music_note.xml  ic_pause.xml  ic_play.xml  ic_settings.xml  ic_skip_next.xml  ic_skip_previous.xml  ic_switch_feature.xml  librespot_receiver_icon_option1_vector.xml  tv_banner.xml
app/src/main/res/font/: bricolage_bold.xml  bricolage_regular.xml  (+3 more)
gradle/: libs.versions.toml
rust/: Cargo.toml  build.rs  rust-toolchain.toml
rust/src/: audio_sink.rs  lib.rs
screenshots/: README.md
scripts/: install-main.sh
(+165 files in other folders)
